Enhance Minesweeper game with modern UI and improved gameplay
- Update game title from 'Sweeper Mine' to 'MineSweeper'
- Add game controls with reset button and status display
- Implement statistics panel showing bombs left and cells left
- Refactor codebase with functional programming approach
- Add hover effects and neighbor highlighting
- Improve canvas rendering with proper DPI scaling
- Add chord action for advanced gameplay (auto-flag/reveal)
- Enhance visual design with better colors and styling

--- a/index.html
+++ b/index.html
@@ -21,10 +21,24 @@
     <link href="style.css" rel="stylesheet" />
   </head>
   <body>
-    <h1>Sweeper Mine</h1>
-    <div id="game">
+    <h1>MineSweeper</h1>
+    <div id="controls">
+      <button id="resetBtn">Reset Game</button>
+      <span id="gameStatus">Playing</span>
+    </div>
+    <div id="stats">
+      <div class="stat-item">
+        <div class="stat-label">Bombs Left</div>
+        <div class="stat-value" id="bombsLeft">20</div>
+      </div>
+      <div class="stat-item">
+        <div class="stat-label">Cells Left</div>
+        <div class="stat-value" id="cellsLeft">44</div>
+      </div>
+    </div>
+    <div id="game-container">
       <canvas id="gameCanvas"></canvas>
     </div>
-    <script src="index.js" defer></script>
+    <script src="index.js" type="module"></script>
   </body>
 </html>
